# language-identification-detection

./: .gitignore  README.md  pyproject.toml
scripts/: run_firered_lid.sh  run_glotlid.sh  run_mms_lid.sh  run_openlid.sh
src/lid/: __init__.py  audio.py  firered.py  glotlid.py  mms.py  openlid.py  text.py
